# saltwater

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: test.yml
benches/: examples.rs
saltwater-codegen/: Cargo.toml  expr.rs  helpers.rs  lib.rs  static_init.rs  stmt.rs
saltwater-parser/: Cargo.toml  macros.rs
saltwater-parser/analyze/: mod.rs
saltwater-parser/data/: error.rs  lex.rs  mod.rs
saltwater-parser/lex/: cpp.rs  mod.rs  replace.rs
src/: main.rs
tests/: runner.rs  runtests.rs  varargs.rs
tests/runner-tests/: hello_world.c
tests/runner-tests/cpp/define/: function.c
tests/runner-tests/cpp/if/: elif.c  elif3.c  nested.c
tests/runner-tests/decls/scope/: 1.c
tests/runner-tests/expr/logical_exprs/: 0.c
tests/runner-tests/stack-overflow/: aggregate_init.c  decl-analyze.c  decl.c  expr.c  scalar_init.c  stmt.c  unary_analyze.c
tests/runner-tests/stmt/scope/: 8.c
tests/utils/: mod.rs
