[package]
name = "saltwater"
version = "0.11.0"
authors = [
  "Joshua Nelson <jyn514@gmail.com>",
  "Graham Scheaffer <me@gisch.dev>",
  "Wesley Norris <repnop@outlook.com>",
  "playX",
  "Kevin Becker <k.becker@byter.dev>",
  "Hunter Damron <hdamron@email.sc.edu>",
  "Justus K <justus.k@protonmail.com>",
]
edition = "2021"
description = "A C compiler written in Rust, with a focus on good error messages."
repository = "https://github.com/jyn514/saltwater/"
readme = "README.md"
categories = ["development-tools", "parser-implementations"]
license = "BSD-3-Clause"
keywords = ["C", "compiler", "recursive-descent", "cranelift"]
default-run = "swcc"
documentation = "https://docs.rs/saltwater"

[dependencies]
ansi_term = "0.12.1"
arcstr = "1.1.0"
tempfile = "3.2.0"
pico-args = { version = "0.4.0", features = ["short-space-opt"] }
color-backtrace = { version = "0.5.0", default-features = false, optional = true }
atty = { version = "0.2.14", default-features = false }
saltwater-parser = { path = "saltwater-parser", version = "0.11.0" }
saltwater-codegen = { path = "saltwater-codegen", version = "0.11.0" }

[features]
default = ["color-backtrace"]
jit = ["saltwater-codegen/jit"]
# for internal use
_test_headers = []

[workspace]

[[bin]]
name = "swcc"
path = "src/main.rs"

[[test]]
name = "jit"
required-features = ["jit"]

[[test]]
name = "runtests"

[[test]]
name = "varargs"

[[test]]
name = "headers"
# MacOS breaks if you pass -undef to the system preprocessor
required-features = ["_test_header"]

[profile.release]
lto = true

[profile.test]
debug = false  # speeds up link time

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[package.metadata.docs.rs]
all-features = true
# opt-out of non-default targets
targets = []
