[package]
name = "saltwater"
version = "0.11.0"
authors = [
  "Joshua Nelson <jyn514@gmail.com>",
  "Graham Scheaffer <me@gisch.dev>",
  "Wesley Norris <repnop@outlook.com>",
  "playX",
  "Kevin Becker <k.becker@byter.dev>",
  "Hunter Damron <hdamron@email.sc.edu>",
  "Justus K <justus.k@protonmail.com>",
]
edition = "2021"
description = "A C compiler written in Rust, with a focus on good error messages."
repository = "https://github.com/jyn514/saltwater/"
readme = "README.md"
categories = ["development-tools", "parser-implementations"]
license = "BSD-3-Clause"
keywords = ["C", "compiler", "recursive-descent", "cranelift"]
default-run = "swcc"
documentation = "https://docs.rs/saltwater"

[dependencies]
ansi_term = { workspace = true }
arcstr = { workspace = true }
tempfile = { workspace = true }
pico-args = { workspace = true }
color-backtrace = { workspace = true, optional = true }
atty = { workspace = true }
saltwater-parser = { path = "saltwater-parser" }
saltwater-codegen = { path = "saltwater-codegen" }

[features]
default = ["color-backtrace"]
jit = ["saltwater-codegen/jit"]
# for internal use
_test_headers = []

[workspace]
members = [
  "saltwater-parser",
  "saltwater-codegen",
]

[workspace.dependencies]
lazy_static = "^1"
thiserror = "^1.0.40"
ansi_term = "^0.12"
arcstr = "^1.1"
tempfile = "^3.4"
pico-args = { version = "^0.4", features = ["short-space-opt"] }
color-backtrace = { version = "^0.5", default-features = false }
atty = { version = "^0.2", default-features = false }
hexponent = "^0.3"
lasso = "^0.6"
codespan = { version = "^0.11", default-features = false }
counter = "^0.5"
shared_str = "^0.1"
time = { version = "^0.3", features = ["formatting"] }

cranelift = "0.92"
cranelift-module = "0.92"
cranelift-object = "0.92"
cranelift-codegen = "0.92"
cranelift-jit = "0.92"
target-lexicon = "0.12"

# Dev Deps
proptest = "^1.1"
proptest-derive = "^0.3"

[[bin]]
name = "swcc"
path = "src/main.rs"

[[test]]
name = "jit"
required-features = ["jit"]

[[test]]
name = "runtests"

[[test]]
name = "varargs"

[[test]]
name = "headers"
# MacOS breaks if you pass -undef to the system preprocessor
required-features = ["_test_header"]

[profile.release]
lto = true

[profile.test]
debug = false  # speeds up link time

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[package.metadata.docs.rs]
all-features = true
# opt-out of non-default targets
targets = []
