[package]
name = "saltwater-codegen"
version = "0.11.0"
authors = ["Joshua Nelson <jyn514@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
lazy_static = { workspace = true }
cranelift = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
cranelift-jit = { workspace = true, optional = true }
target-lexicon = { workspace = true }

saltwater-parser = { path = "../saltwater-parser", features = ["codegen"] }

[features]
jit = ["cranelift-jit", "saltwater-parser/jit"]
