[package]
name = "saltwater-parser"
version = "0.11.0"
authors = ["Joshua Nelson <jyn514@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
lazy_static = { workspace = true }
arcstr = { workspace = true }
hexponent = { workspace = true }
thiserror = { workspace = true }
lasso = { workspace = true }
codespan = { workspace = true, default-features = false }
counter = { workspace = true }
shared_str = { workspace = true }
time = { workspace = true }

cranelift-codegen = { workspace = true, optional = true }
cranelift-object = { workspace = true, optional = true }
target-lexicon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }

[features]
codegen = ["cranelift-codegen", "cranelift-object"]
jit = []
